--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,4 @@
-html{width:420px} /* Fix for http://crbug.com/61370 */
+html{width:420px} /* Fix for https://crbug.com/61370 */
 #wrapper{position:relative;width:400px;min-height:313px;background:#fff;padding:10px}
 #header{width:400px;height:45px;border-bottom:#eee 1px solid}
 #loading{position:absolute;top:38px;left:51px;}
@@ -70,4 +70,4 @@ span.charts_bg{width:16px;height:16px;float:left;background:url(/images/icon_cha
 h3{text-align:center;font-weight:bold;font-size:12px;margin:5px 0 0;background:#f8f8f8;padding:5px}
 
 #chart_area{width:400px;margin:5px auto 0}
-#chart{width:400px;height:196px}
+#chart{width:380px;height:196px;padding:0 10px}
